<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="0dp"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:padding="8dp"
                android:text="@string/toolbar_title"
                android:textColor="#03A9F4"
                android:textSize="25sp" />

        </RelativeLayout>


    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="0dp"
        android:backgroundTint="@color/white"
        app:tabIndicatorColor="#03A9F4"
        app:tabIndicatorHeight="3.5dp"
        app:tabMode="scrollable"
        app:tabSelectedTextColor="#03A9F4"
        app:tabTextColor="#618C8F">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_tab" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/sports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sports_tab" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/health"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health_tab" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/science"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/science_tab" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/entertainment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entertainment_tab" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/technology"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/technology_tab" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/startup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startup_tab" />


    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tabLayout"
        android:layout_marginTop="0dp">

    </androidx.viewpager.widget.ViewPager>


</RelativeLayout>